# near-starter-app

./: README.md
contract/: Cargo.toml
contract/src/: lib.rs  models.rs
